--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -191,6 +191,8 @@ models:
         resolver: true
       topic:
         resolver: true
+      gradeDefence:
+        resolver: true
   Council:
     fields:
       semester:
